conncetion string created

--- a/BankWebApp/appsettings.json
+++ b/BankWebApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BankWebAppContext": "Server=(localdb)\\mssqllocaldb;Database=BankWebApp.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
