--- a/BankWebApp/appsettings.json
+++ b/BankWebApp/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BankWebAppContext": "Server=(localdb)\\mssqllocaldb;Database=BankWebApp.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "BankWebAppContext": "Server=(localdb)\\mssqllocaldb;Database=BankWebApp.Data-1;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
